[AN-037] - 43_katty_cher

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,15 +18,15 @@
                    class="rounded-circle" />
             </div>
             <div class="divider py-2 "></div>
-            <div class = row>
-              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
-              <a  href='https://t.me/self_know_grow_secrets'>Мой канал в Telegram</a>
-            </div>
-<!--            Ссылка на инсту-->
 <!--            <div class = row>-->
-<!--            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">-->
-<!--            <a  href='https://www.instagram.com/anna_shevelevaaa?igsh=MTM4YTc1ZjI5aThxdQ%3D%3D&utm_source=qr'>Страница в Instagram</a>-->
+<!--              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">-->
+<!--              <a  href='https://t.me/self_know_grow_secrets'>Мой канал в Telegram</a>-->
 <!--            </div>-->
+<!--            Ссылка на инсту-->
+            <div class = row>
+            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
+            <a  href='https://www.instagram.com/ketty_cher?igsh=MXNzaWthaHZ3OXEzZg=='>Страница в Instagram</a>
+            </div>
         </div>
       </div>
     </div>
