--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/ketty_cher?igsh=MXNzaWthaHZ3OXEzZg=='>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/psyche.matrix?igsh=d3VxaGVlaTRkY2pn'>Страница в Instagram</a>
             </div>
         </div>
       </div>
