--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,8 +112,14 @@
   <div class="row-centered mt-5">
     <a
       href='https://play.google.com/store/apps/details?id=com.zelianko.numerologic&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-      <img width="240" height="92" alt='Доступно в Google Play'
-           src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
+      <img width="240" height="100" alt='Доступно в Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/ru_badge_web_generic.png'/></a>
+    <a href="https://apps.apple.com/ru/app/%D0%BF%D1%81%D0%B8%D1%85%D0%BE%D0%BC%D0%B0%D1%82%D1%80%D0%B8%D1%86%D0%B0-%D0%BA%D0%B2%D0%B0%D0%B4%D1%80%D0%B0%D1%82-%D0%BF%D0%B8%D1%84%D0%B0%D0%B3%D0%BE%D1%80%D0%B0/id6670796543?itscg=30200&itsct=apps_box_badge&mttnsubad=6670796543" style="display: inline-block;">
+      <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1726185600" alt="Download on the App Store" width="240" height="100" />
+    </a>
   </div>
+
+
+
+
 
 </div>
